@@ -84,6 +84,7 @@ class VariadicFunctionValueTest {
     private static final Typed RECORD_1 = new RecordConstructorValue.RecordFn().encapsulate(List.of(STRING_1, INT_1, FLOAT_1));
     private static final Typed RECORD_2 = new RecordConstructorValue.RecordFn().encapsulate(List.of(STRING_2, INT_2, FLOAT_2));
     private static final Typed RECORD_3 = new RecordConstructorValue.RecordFn().encapsulate(List.of(STRING_3, INT_3, FLOAT_3));
+    private static final Typed NULL_TYPED = new LiteralValue<>(Type.primitiveType(Type.TypeCode.NULL), null);
     private static final Typed RECORD_NAMED = RecordConstructorValue.ofColumns(ImmutableList.of(
             Column.of(Type.Record.Field.of(Type.primitiveType(Type.TypeCode.STRING), Optional.of("f1")), LiteralValue.ofScalar("sz")),
             Column.of(Type.Record.Field.of(Type.primitiveType(Type.TypeCode.INT), Optional.of("f2")), LiteralValue.ofScalar(100)),
@@ -117,10 +118,17 @@ class VariadicFunctionValueTest {
                     QueryResult.ofComputed(TestRecords7Proto.MyRecord1.newBuilder().setRecNo(4L).build())).build(),
             typeRepository);
 
-    private static DynamicMessage getMessageForRecordTypeUnnamed() {
-        final var values = ImmutableList.of("a", 1, 1.0f);
+    private static DynamicMessage getMessageForRecordTypeUnnamedWithValues(ImmutableList<Object> values) {
         final var messageBuilder = typeRepository.newMessageBuilder(recordTypeUnnamed);
         for (int i = 0; i < recordTypeUnnamed.getFields().size(); i++) {
+            messageBuilder.setField(messageBuilder.getDescriptorForType().getFields().get(i), values.get(i));
+        }
+        return messageBuilder.build();
+    }
+
+    private static DynamicMessage getMessageForRecordTypeNamedWithValues(ImmutableList<Object> values) {
+        final var messageBuilder = typeRepository.newMessageBuilder(recordTypeNamed);
+        for (int i = 0; i < recordTypeNamed.getFields().size(); i++) {
             messageBuilder.setField(messageBuilder.getDescriptorForType().getFields().get(i), values.get(i));
         }
         return messageBuilder.build();
@@ -282,7 +290,7 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(STRING_3, STRING_3), new VariadicFunctionValue.CoalesceFn(), "c", false),
                     Arguments.of(List.of(BOOLEAN_2, BOOLEAN_2), new VariadicFunctionValue.CoalesceFn(), true, false),
                     Arguments.of(List.of(LIST_INT_1, LIST_INT_1), new VariadicFunctionValue.CoalesceFn(), List.of(1, 2, 3), false),
-                    Arguments.of(List.of(RECORD_1, RECORD_1), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
+                    Arguments.of(List.of(RECORD_1, RECORD_1), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
 
                     Arguments.of(List.of(INT_3, INT_2), new VariadicFunctionValue.CoalesceFn(), 3, false),
                     Arguments.of(List.of(LONG_3, LONG_2), new VariadicFunctionValue.CoalesceFn(), 3L, false),
@@ -291,7 +299,9 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(STRING_3, STRING_2), new VariadicFunctionValue.CoalesceFn(), "c", false),
                     Arguments.of(List.of(BOOLEAN_2, BOOLEAN_1), new VariadicFunctionValue.CoalesceFn(), true, false),
                     Arguments.of(List.of(LIST_INT_1, LIST_INT_2), new VariadicFunctionValue.CoalesceFn(), List.of(1, 2, 3), false),
-                    Arguments.of(List.of(RECORD_1, RECORD_2), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
+                    Arguments.of(List.of(RECORD_1, RECORD_2), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
+                    Arguments.of(List.of(RECORD_1, RECORD_NAMED), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
+                    Arguments.of(List.of(RECORD_NAMED, RECORD_1), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeNamedWithValues(ImmutableList.of("sz", 100, 100.0f)), false),
 
                     Arguments.of(List.of(INT_1, INT_2, INT_3), new VariadicFunctionValue.CoalesceFn(), 1, false),
                     Arguments.of(List.of(LONG_1, LONG_2, LONG_3), new VariadicFunctionValue.CoalesceFn(), 1L, false),
@@ -300,7 +310,7 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(STRING_1, STRING_2, STRING_3), new VariadicFunctionValue.CoalesceFn(), "a", false),
                     Arguments.of(List.of(BOOLEAN_1, BOOLEAN_2, BOOLEAN_1), new VariadicFunctionValue.CoalesceFn(), false, false),
                     Arguments.of(List.of(LIST_INT_1, LIST_INT_2, LIST_INT_3), new VariadicFunctionValue.CoalesceFn(), List.of(1, 2, 3), false),
-                    Arguments.of(List.of(RECORD_1, RECORD_2, RECORD_3), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
+                    Arguments.of(List.of(RECORD_1, RECORD_2, RECORD_3), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
 
                     Arguments.of(List.of(INT_1, INT_2, INT_3, INT_NULL), new VariadicFunctionValue.CoalesceFn(), 1, false),
                     Arguments.of(List.of(LONG_1, LONG_2, LONG_3, LONG_NULL), new VariadicFunctionValue.CoalesceFn(), 1L, false),
@@ -309,7 +319,7 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(STRING_1, STRING_2, STRING_3, STRING_NULL), new VariadicFunctionValue.CoalesceFn(), "a", false),
                     Arguments.of(List.of(BOOLEAN_1, BOOLEAN_2, BOOLEAN_1, BOOLEAN_NULL), new VariadicFunctionValue.CoalesceFn(), false, false),
                     Arguments.of(List.of(LIST_INT_1, LIST_INT_2, LIST_INT_3, LIST_INT_NULL), new VariadicFunctionValue.CoalesceFn(), List.of(1, 2, 3), false),
-                    Arguments.of(List.of(RECORD_1, RECORD_2, RECORD_3, RECORD_NULL), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
+                    Arguments.of(List.of(RECORD_1, RECORD_2, RECORD_3, RECORD_NULL), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
 
                     Arguments.of(List.of(INT_NULL, INT_1, INT_2, INT_3, INT_NULL), new VariadicFunctionValue.CoalesceFn(), 1, false),
                     Arguments.of(List.of(LONG_NULL, LONG_1, LONG_2, LONG_3, LONG_NULL), new VariadicFunctionValue.CoalesceFn(), 1L, false),
@@ -318,7 +328,7 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(STRING_NULL, STRING_1, STRING_2, STRING_3, STRING_NULL), new VariadicFunctionValue.CoalesceFn(), "a", false),
                     Arguments.of(List.of(BOOLEAN_NULL, BOOLEAN_1, BOOLEAN_2, BOOLEAN_1, BOOLEAN_NULL), new VariadicFunctionValue.CoalesceFn(), false, false),
                     Arguments.of(List.of(LIST_INT_NULL, LIST_INT_1, LIST_INT_2, LIST_INT_3, LIST_INT_NULL), new VariadicFunctionValue.CoalesceFn(), List.of(1, 2, 3), false),
-                    Arguments.of(List.of(RECORD_NULL, RECORD_1, RECORD_2, RECORD_3, RECORD_NULL), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
+                    Arguments.of(List.of(RECORD_NULL, RECORD_1, RECORD_2, RECORD_3, RECORD_NULL), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
 
                     Arguments.of(List.of(INT_NULL, INT_NULL), new VariadicFunctionValue.CoalesceFn(), null, false),
                     Arguments.of(List.of(LONG_NULL, LONG_NULL), new VariadicFunctionValue.CoalesceFn(), null, false),
@@ -353,8 +363,10 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(LIST_INT_2, LIST_FLOAT_1), new VariadicFunctionValue.CoalesceFn(), List.of(3.0f, 2.0f, 1.0f), false),
                     Arguments.of(List.of(LIST_FLOAT_1, LIST_INT_2), new VariadicFunctionValue.CoalesceFn(), List.of(1.0f, 2.0f, 3.0f), false),
 
-                    Arguments.of(List.of(RECORD_1, RECORD_2), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
-                    Arguments.of(List.of(RECORD_1, RECORD_NAMED), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamed(), false),
+
+                    Arguments.of(List.of(RECORD_1, RECORD_2), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
+                    Arguments.of(List.of(RECORD_1, RECORD_NAMED), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
+                    Arguments.of(List.of(NULL_TYPED, RECORD_1), new VariadicFunctionValue.CoalesceFn(), getMessageForRecordTypeUnnamedWithValues(ImmutableList.of("a", 1, 1.0f)), false),
 
                     Arguments.of(List.of(F, INT_1), new VariadicFunctionValue.CoalesceFn(), 4L, false),
                     Arguments.of(List.of(INT_1, F), new VariadicFunctionValue.CoalesceFn(), 1L, false),
@@ -372,7 +384,6 @@ class VariadicFunctionValueTest {
                     Arguments.of(List.of(LONG_1, BOOLEAN_1), new VariadicFunctionValue.CoalesceFn(), null, true),
                     Arguments.of(List.of(FLOAT_1, BOOLEAN_1), new VariadicFunctionValue.CoalesceFn(), null, true),
                     Arguments.of(List.of(DOUBLE_1, BOOLEAN_1), new VariadicFunctionValue.CoalesceFn(), null, true)
-
             );
         }
     }
@@ -380,7 +391,7 @@ class VariadicFunctionValueTest {
     @ParameterizedTest
     @SuppressWarnings({"rawtypes", "unchecked", "ConstantConditions"})
     @ArgumentsSource(BinaryPredicateTestProvider.class)
-    void testPredicate(List<Value> args, BuiltInFunction function, Object result, boolean shouldFail) {
+    void testPredicate(List<Value> args, BuiltInFunction function, Object expectedValue, boolean shouldFail) {
         if (shouldFail) {
             try {
                 function.encapsulate(args);
@@ -393,7 +404,7 @@ class VariadicFunctionValueTest {
             Typed value = function.encapsulate(args);
             Assertions.assertTrue(value instanceof VariadicFunctionValue);
             Object actualValue = ((VariadicFunctionValue)value).eval(null, evaluationContext);
-            Assertions.assertEquals(result, actualValue);
+            Assertions.assertEquals(expectedValue, actualValue);
         }
     }
 }
